# databridge

./: .gitignore  README.md  manage.py  pyproject.toml  requirements.txt
databridge/: asgi.py  settings.py  urls.py  wsgi.py
media/outputs/: result_LZD3jAw.csv
media/uploads/: input_1PgsTBs.csv  input_hO8Y0Jy.csv
pipelines/: admin.py  models.py
pipelines/api/: exception_handler.py  serializers.py  urls.py  views.py
pipelines/engine/: transforms.py
pipelines/migrations/: 0001_initial.py
pipelines/services/: config_validator.py  pipeline_service.py
pipelines/tests/: test_api.py
